--- a/src/section/HomeSection/style.css
+++ b/src/section/HomeSection/style.css
@@ -1,3 +1,29 @@
+@keyframes fadeIn {
+    0%   {opacity: 0}
+    100% {opacity: 1}
+}
+
+#homeSection .title {
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+}
+
+#homeSection h1 {
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#homeSection h2 {
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
+    animation-name: fadeIn;
+    animation-duration: 1.5s;
+}
+
 @media only screen and (max-width: 576px) {
     #homeSection .title {
         font-size: 80px !important;
@@ -8,4 +34,12 @@
     #homeSection .title {
         font-size: 60px !important;
     }
+}
+
+#homeSection .reflection {
+    position: absolute;
+    background: rgba(255,255,255,0.002);
+    border-radius: 0 100% 0 0;
+    bottom: -100px;
+    left: 0;
 }
