--- a/src/section/HomeSection/cubesat.css
+++ b/src/section/HomeSection/cubesat.css
@@ -7,6 +7,7 @@
 #cubesatImg {
     animation-name: subtleRotation;
     animation-duration: 20s;
+    animation-delay: -18s;
     animation-iteration-count: infinite;
 }
 
