--- a/src/section/Experiment/Experiment.css
+++ b/src/section/Experiment/Experiment.css
@@ -1,18 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 
-h1,h2,h3,h4,h5,h6{
+h1, h2, h3, h4, h5, h6 {
     color: black;
     position: static;
 }
-#mainDiv{
+
+#mainDiv {
     background-color: #f8f8f8;
     font-family: 'Oswald', sans-serif;
 }
 
-#tilesContainer{
+#mainDiv p {
+    text-align: center;
+    font-size: 16px;
 }
 
-.Title{
+#titleDivider {
+    border-top: 3px solid darkblue;
+}
+
+#tilesContainer {
+    margin-top: 50px;
+}
+
+#title {
     font-size: 60px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #22267b;
+    margin-bottom: 25px;
 }
 
