--- a/src/component/ExperimentTile/ExperimentTile.css
+++ b/src/component/ExperimentTile/ExperimentTile.css
@@ -15,9 +15,19 @@
     font-size: 14px;
 }
 
-#tileContainer h2 {
+.TitleTile{
     font-size: 35px;
     font-weight: 500;
     text-transform: uppercase;
     margin-top: 5px;
+}
+
+@media (max-width: 350px) {
+    .TitleTile{
+        font-size: 25px;
+    }
+
+    #tileContainer p{
+        font-size: 12px;
+    }
 }
