--- a/src/section/Experiment/Experiment.css
+++ b/src/section/Experiment/Experiment.css
@@ -34,3 +34,19 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 25px;
 }
 
+@media (max-width: 500px) {
+    #title{
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 350px) {
+    #title{
+        font-size: 25px;
+    }
+
+    #mainDiv p{
+        font-size: 12px;
+    }
+}
+
