--- a/src/section/Experiment/Experiment.css
+++ b/src/section/Experiment/Experiment.css
@@ -33,6 +33,8 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     color: #22267b;
     margin-bottom: 25px;
+    margin-top: 25px;
+    text-align: center;
 }
 
 @media (max-width: 500px) {
