--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -18,6 +18,8 @@
     height: 45px;
     box-sizing: border-box;
     padding: 8px;
+    transition: background;
+    transition-duration: 0.3s;
 }
 
 .navbarElement_title {
