--- a/src/section/IntroductionSection/Animation.css
+++ b/src/section/IntroductionSection/Animation.css
@@ -1,9 +1,27 @@
-.photoFadeOut{
-    opacity: 0;
-    transition: opacity 1s;
+.topPhoto, .bottomPhoto {
+    position: absolute;
+    left: 0;
 }
 
-.photoFadeIn{
-    opacity: 1;
-    transition: opacity 1s;
+@keyframes FadeInOut {
+    0% {
+        opacity: 1;
+    }
+    45% {
+        opacity: 1;
+    }
+    55% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.topPhoto {
+    animation-name: FadeInOut;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+    animation-direction: alternate;
 }
