--- a/src/section/IntroductionSection/IntroductionSection.css
+++ b/src/section/IntroductionSection/IntroductionSection.css
@@ -1,59 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap');
 
 #IntroSection {
-    position: relative;
-}
-
-#PhotoContainer {
-    position: absolute;
-    z-index: -2;
-    overflow: hidden;
-    width: 100%;
-    height: 950px;
-}
-
-#photo {
-    width: 2000px;
-    transform: scale(1.15) translate(100px, -200px);
-}
-
-#Background {
-    position: absolute;
-    z-index: -2;
-    width: 100%;
-    height: 950px;
-    background-color: #22267b;
-    opacity: 0.8;
-}
-
-#ContentContainer {
-    position: absolute;
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    margin-top: 200px;
 }
 
-#ContentContainer h1 {
+#IntroSection h1 {
     font-size: 100px;
     text-transform: uppercase;
     color: white;
 }
 
-#ContentContainer p {
+#IntroSection p {
     font-size: 30px;
     color: white;
 }
 
+#IntroSection #CardBox {
+    position: relative;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1f1f1f;
+}
+
+#IntroSection #CardBox:before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background:#fff;
+    transform: skew(2deg, 1deg);
+    z-index: -1;
+}
+
+#IntroSection #CardBox:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index: -2;
+    filter: blur(40px);
+}
+
+#IntroSection #CardBox:before,
+#IntroSection #CardBox:after {
+    background: linear-gradient(335deg, #722ed1, #060c21, #2f54eb);
+}
+
 .IntroIcon {
-    font-size: 100px;
-    color: yellow;
-    margin-top: 250px;
+    font-size: 60px;
+    color: #2f54eb;
     animation-name: arrowVerticalMovement;
     animation-duration: 4s;
     animation-iteration-count: infinite;
 }
 
 @keyframes arrowVerticalMovement {
-    0% {transform: translate(0, 20px)}
-    50% {transform: translate(0, 0)}
-    100% {transform: translate(0, 20px)}
+    0% {
+        transform: translate(0, 20px)
+    }
+    50% {
+        transform: translate(0, 0)
+    }
+    100% {
+        transform: translate(0, 20px)
+    }
 }
