--- a/src/section/IntroductionSection/IntroductionSection.css
+++ b/src/section/IntroductionSection/IntroductionSection.css
@@ -76,3 +76,16 @@
         transform: translate(0, 20px)
     }
 }
+
+#SquaresContainer{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+#CometContainer{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
