--- a/src/section/IntroductionSection/IntroductionSection.css
+++ b/src/section/IntroductionSection/IntroductionSection.css
@@ -1,27 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap');
 
 #IntroSection {
+    position: relative;
     display: flex;
-    min-height: 100vh;
+    min-height: 1000px;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 #IntroSection h1 {
-    font-size: 100px;
+    font-size: 80px;
+    font-weight: 500;
     text-transform: uppercase;
-    color: white;
+    color:  rgba(255,255,255,0.9);
+    letter-spacing: 5px;
 }
 
 #IntroSection p {
-    font-size: 30px;
-    color: white;
+    font-size: 20px;
+    color: rgba(255,255,255,0.7);
 }
 
 #IntroSection #CardBox {
     position: relative;
-    height: 70vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,4 +92,54 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+}
+
+@media (max-width: 1100px) {
+    #IntroSection h1{
+        font-size: 70px;
+    }
+    #IntroSection p{
+        font-size: 18px;
+    }
+}
+@media (max-width: 850px) {
+    #IntroSection{
+    min-height: 800px;
+    }
+
+    #IntroSection h1{
+        font-size: 60px;
+    }
+    #IntroSection p{
+        font-size: 16px;
+    }
+}
+@media (max-width: 800px) {
+    #IntroSection h1{
+        font-size: 50px;
+    }
+}
+@media (max-width: 600px) {
+    #IntroSection h1{
+        font-size: 30px;
+    }
+    #IntroSection p{
+        font-size: 14px;
+    }
+}
+@media (max-width: 450px) {
+    #IntroSection h1{
+        font-size: 25px;
+    }
+    #IntroSection p{
+        font-size: 13px;
+    }
+}
+@media (max-width: 350px) {
+    #IntroSection h1{
+        font-size: 20px;
+    }
+    #IntroSection p{
+        font-size: 11px;
+    }
 }
