--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  background: rgba(31,31,31,0.96);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
